[#1] Adding font sizes
Setting up fonts in theme.json

Adding TW spacing to theme.json

--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -1,10 +1,4 @@
+@import "./fonts.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-@layer components {
-	body{
-		@apply bg-black;
-	}
-}
