--- a/wp-content/themes/wp-starter/blocks/cta/render.twig
+++ b/wp-content/themes/wp-starter/blocks/cta/render.twig
@@ -6,7 +6,7 @@
   [
     'core/pattern',
     {
-      'slug': 'wp-starter/cta-dynamic'
+      'slug': 'wp-starter/cta-inner-blocks'
     }
   ]
 ] %}
