[#6, #4, #3] Inner Blocks adjustments

--- a/wp-content/themes/wp-starter/blocks/accordion/render.twig
+++ b/wp-content/themes/wp-starter/blocks/accordion/render.twig
@@ -4,14 +4,19 @@
 
 {% set template = [
   [
-    'core/pattern',
+    'core/details',
     {
-      'slug': 'wp-starter/accordion-inner-blocks'
+      'showContent': true
     }
-  ]
+  ],
+  [ 'core/details' ],
+  [ 'core/details' ],
 ] %}
 {% set allowed = [ 'core/details' ] %}
-{% set inner = { template: template, allowedBlocks: allowed } %}
+{% set inner = {
+	template: template,
+	allowedBlocks: allowed
+} %}
 <section {{ block_attrs( attributes ) }}>
   {{ inner_blocks( inner ) }}
 </section>
