[#6] Base Text & Icon Card Block

--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/text-icon-card/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/text-icon-card/render.twig
@@ -11,6 +11,6 @@
   ]
 ] %}
 {% set inner = { template: template } %}
-<section {{ block_attrs( attributes ) }}>
+<article {{ block_attrs( attributes ) }}>
   {{ inner_blocks( inner ) }}
-</section>
+</article>
