[#8] Setting up base style for cta

--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -3,4 +3,7 @@
 @import "tailwindcss/utilities";
 
 /*Import custom styles*/
+@import "./base/typography.css";
+
 @import "./blocks/buttons.css";
+@import "./blocks/cta.css";
