--- a/wp-content/themes/wp-starter/blocks/cta/render.twig
+++ b/wp-content/themes/wp-starter/blocks/cta/render.twig
@@ -11,6 +11,8 @@
   ]
 ] %}
 {% set inner = { template: template } %}
-<section {{ block_attrs( attributes ) }}>
-  {{ inner_blocks( inner ) }}
+<section {{ block_attrs( attributes, "flex flex-col gap-24 mx-auto p-24 lg:p-64" ) }}>
+	<div class="flex flex-col gap-8 flex-1">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
