--- a/wp-content/themes/wp-starter/src/styles/blocks/cta.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/cta.css
@@ -1,6 +1,11 @@
 @layer components {
-	.acf-block-cta{
-		.wp-block-heading{
+	.acf-block-cta {
+		&.has-accent-background-color,
+		&.has-black-background-color * {
+			@apply !text-white-100;
+		}
+
+		.wp-block-heading {
 			@apply text-2xl font-bold;
 		}
 	}
