--- a/wp-content/themes/wp-starter/src/styles/blocks/cta.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/cta.css
@@ -2,14 +2,14 @@
 	.acf-block-cta {
 		/* Variants for background color */
 		&.has-black-background-color,
+		&.has-gray-500-background-color,
 		&.has-accent-background-color * {
-			@apply !text-white-100;
+			@apply !text-white;
 
 			.wp-block-heading {
-				@apply !text-white-100;
+				@apply !text-white;
 			}
 		}
-
 
 		.wp-block-heading {
 			@apply text-2xl font-bold;
