[#7] Media/Text Attributes update

--- a/wp-content/themes/wp-starter/blocks/text-image/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-image/render.twig
@@ -5,7 +5,10 @@
 {% set template = [
 	[
 		'core/media-text',
-		[],
+		{
+			'imageFill': true,
+			'verticalAlignment': 'center',
+		},
 		[
 			[
 				'core/pattern',
