Add fix for image size in editor, move style directory

--- a/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/render.twig
@@ -12,6 +12,6 @@
 	template: template,
 	allowedBlocks: allowed,
 } %}
-<section {{ block_attrs( attributes ) }}>
+<section {{ block_attrs( attributes, "gap-16" ) }}>
   {{ inner_blocks( inner ) }}
 </section>
