--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -2,9 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* ACF Block styles */
-@import '../../blocks/logo-grid/style.css';
-
 /*Import custom styles*/
 @import "./base/has-bg.css";
 @import "./base/typography.css";
@@ -12,3 +9,4 @@
 @import "./blocks/buttons.css";
 @import "./blocks/cta.css";
 @import "./blocks/accordion.css";
+@import "./blocks/logo-grid.css";
