--- a/wp-content/themes/wp-starter/src/styles/blocks/logo-grid.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/logo-grid.css
@@ -1,8 +1,7 @@
 @layer components {
 	.acf-block-logo-grid figure {
-		@apply flex items-center justify-center;
-		@apply object-contain;
-		@apply lg:max-w-240;
+		@apply flex;
+		@apply basis-1/2-gap lg:basis-1/4-gap;
 	}
 
 	.acf-block-logo-grid figure img {
