--- a/wp-content/themes/wp-starter/src/styles/blocks/buttons.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/buttons.css
@@ -1,5 +1,17 @@
-@layer utilities {
-	.wp-block-button__link {
-		@apply transition-colors;
+@layer components {
+	:not(.has-black-background-color),
+	:not(.has-gray-500-background-color),
+	:not(.has-accent-background-color) {
+		.wp-block-button {
+			.wp-block-button__link {
+				@apply btn-contained;
+			}
+
+			&.is-style-outline{
+				.wp-block-button__link {
+					@apply btn-outlined;
+				}
+			}
+		}
 	}
 }
