--- a/wp-content/plugins/acf-blocks-toolkit/src/index.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/index.scss
@@ -1,4 +1,4 @@
-.wp-block-button[class*=has-icon__] {
+.wp-block-button[class*="has-icon__"] {
 	.wp-block-button__link {
 		display: flex;
 		gap: 0.5em;
