--- a/wp-content/themes/wp-starter/src/styles/blocks/alert-banner.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/alert-banner.css
@@ -1,49 +1,51 @@
-.acf-block-alert-banner {
-	&.is-style-dismissible {
-		@apply relative;
+@layer components {
+	.acf-block-alert-banner {
+		&.is-style-dismissible {
+			@apply relative;
 
-		& .dismiss {
-			@apply bg-transparent;
-			@apply border-none;
-			@apply cursor-pointer;
-			@apply absolute;
-			@apply right-2 top-1/2;
-			@apply -translate-y-1/2;
-			@apply z-10;
+			& .dismiss {
+				@apply bg-transparent;
+				@apply border-none;
+				@apply cursor-pointer;
+				@apply absolute;
+				@apply right-2 top-1/2;
+				@apply -translate-y-1/2;
+				@apply z-10;
 
-			&:after {
-				@apply content-['\2715'];
+				&:after {
+					@apply content-['\2715'];
+				}
+			}
+		}
+
+		&:not(.is-style-dismissible) {
+			& .dismiss {
+				@apply hidden;
 			}
 		}
 	}
 
-	&:not(.is-style-dismissible) {
-		& .dismiss {
-			@apply hidden;
+	.wp-block-acf-alert-banner .acf-block-alert-banner.is-style-dismissible {
+		&:before {
+			@apply rounded;
+			@apply text-white;
+			@apply text-xs;
+			@apply left-16 -top-10;
+			@apply absolute;
+			@apply pointer-events-none;
+			@apply py-2 px-5;
+			@apply z-20;
 		}
-	}
-}
 
-.wp-block-acf-alert-banner .acf-block-alert-banner.is-style-dismissible {
-	&:before {
-		@apply rounded;
-		@apply text-white;
-		@apply text-xs;
-		@apply left-16 -top-10;
-		@apply absolute;
-		@apply pointer-events-none;
-		@apply py-2 px-5;
-		@apply z-20;
-	}
+		&:not([data-id]):before {
+			@apply bg-red-700;
+			@apply uppercase;
+			@apply content-['ID Required: See Advanced > HTML Anchor'];
+		}
 
-	&:not([data-id]):before {
-		@apply bg-red-700;
-		@apply uppercase;
-		@apply content-['ID Required: See Advanced > HTML Anchor'];
-	}
-
-	&[data-id]:before {
-		@apply bg-black;
-		content: '#' attr(data-id);
+		&[data-id]:before {
+			@apply bg-black;
+			content: '#' attr(data-id);
+		}
 	}
 }
