--- a/wp-content/themes/wp-starter/src/styles/blocks/accordion.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/accordion.css
@@ -1,21 +1,21 @@
 @layer components {
 	.acf-block-accordion {
 		details.wp-block-details {
-			@apply border-t last-of-type:border-b px-4;
+			@apply border-t px-4 last-of-type:border-b;
 
 			> summary {
-				@apply relative my-12 text-base font-bold flex cursor-pointer justify-between py-12 pr-24;
+				@apply relative my-12 flex cursor-pointer justify-between py-12 pr-24 text-base font-bold;
 				@apply marker:content-none focus:outline-none;
-				@apply after:content-['\002B'] after:absolute after:right-0 after:top-0 after:bottom-0 after:flex after:items-center after:text-lg after:font-mono;
+				@apply after:absolute after:bottom-0 after:right-0 after:top-0 after:flex after:items-center after:font-mono after:text-lg after:content-['\002B'];
 				@apply hover:text-sky-600 hover:after:text-sky-600;
-				@apply focus:text-sky-600 focus:after:text-sky-600 focus:outline-sky-600;
+				@apply focus:text-sky-600 focus:outline-sky-600 focus:after:text-sky-600;
 			}
 
 			&[open] {
 				@apply pb-24;
 
 				> summary {
-					@apply after:content-['\2212'] after:text-sky-600;
+					@apply after:text-sky-600 after:content-['\2212'];
 				}
 			}
 		}
