--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -1,12 +1,12 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 /*Import custom styles*/
-@import "./base/has-bg.css";
-@import "./base/typography.css";
+@import './base/has-bg.css';
+@import './base/typography.css';
 
-@import "./blocks/buttons.css";
-@import "./blocks/cta.css";
-@import "./blocks/accordion.css";
-@import "./blocks/logo-grid.css";
+@import './blocks/buttons.css';
+@import './blocks/cta.css';
+@import './blocks/accordion.css';
+@import './blocks/logo-grid.css';
