--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -10,3 +10,4 @@
 @import './blocks/cta.css';
 @import './blocks/accordion.css';
 @import './blocks/logo-grid.css';
+@import './blocks/text-image.css';
