[#6] Adding style for image cards

--- a/wp-content/themes/wp-starter/src/styles/blocks/cta.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/cta.css
@@ -1,5 +1,16 @@
 @layer components {
 	.acf-block-cta {
+		/* Variants for background color */
+		&.has-black-background-color,
+		&.has-gray-500-background-color,
+		&.has-accent-background-color * {
+			@apply !text-white;
+
+			.wp-block-heading {
+				@apply !text-white;
+			}
+		}
+
 		.wp-block-heading {
 			@apply text-2xl font-bold;
 		}
