--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -11,3 +11,4 @@
 @import './blocks/accordion.css';
 @import './blocks/logo-grid.css';
 @import './blocks/text-image.css';
+@import './blocks/text-icon-cards.css';
