--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -18,7 +18,13 @@ Block: Alert Banner
 	template: template,
 	allowedBlocks: allowed
 } %}
-<section {{ block_attrs( attributes, 'gap-24 lg:gap-48' ) }}>
-	<div class="flex flex-col gap-24 items-start lg:flex-row lg:gap-48 lg:items-center">{{ inner_blocks( inner ) }}</div>
-	{{ function( 'alert_banner_dismiss_button' ) }}
+
+<section
+	x-data="{ {{ attributes.id }}: $persist(true) }"
+	x-show="{{ attributes.id }}"
+	{{ block_attrs( attributes, 'gap-24 lg:gap-48' ) }}
+>
+	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">{{ inner_blocks( inner ) }}</div>
+	{{ function( 'alert_banner_dismiss_button', attributes.id ) }}
 </section>
+
