[#13] Just a few tweaks

--- a/wp-content/themes/wp-starter/src/styles/blocks/accordion.css
+++ b/wp-content/themes/wp-starter/src/styles/blocks/accordion.css
@@ -1,6 +1,6 @@
 @layer components {
 	.acf-block-accordion {
-		details.wp-block-details {
+		& details.wp-block-details {
 			@apply border-t px-4 last-of-type:border-b;
 
 			> summary {
