--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -19,14 +19,19 @@ Block: Alert Banner
 	allowedBlocks: allowed
 } %}
 
+{% set attrs = {} %}
+
+{% if function('is_admin') == false %}
+	{% set attrs = {
+		'x-data': '{ ' ~ attributes.id ~ ': $persist(true) }',
+		'x-show': attributes.id
+	} %}
+{% endif %}
 <section
-	{% if function('is_admin') == false %}
-		x-data="{ {{ attributes.id }}: $persist(true) }"
-		x-show="{{ attributes.id }}"
-	{% endif %}
-	{{ block_attrs( attributes, 'gap-24 lg:gap-48' ) }}
+	{{ block_attrs( attributes, 'gap-24 lg:gap-48', attrs ) }}
 >
-	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">{{ inner_blocks( inner ) }}</div>
+	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">
+		{{ inner_blocks( inner ) }}
+	</div>
 	{{ function( 'alert_banner_dismiss_button', attributes.id ) }}
 </section>
-
