[#13] Alert Banner UI (#37)
* [#13] Alert Banner UI

* Wrap CSS in components layer

* Update content class selectors

* Make alert banner mobile-friendly

* [#13] Alert JS (#39)

* [#13] Adding alert toggle

* [#13] Fixing admin error

* [#13] Just a few tweaks

* [#13] PR Feedback

---------

Co-authored-by: Brian DiChiara <brian.dichiara@viget.com>

---------

Co-authored-by: Nathan Schmidt <91974372+nathan-schmidt-viget@users.noreply.github.com>
Co-authored-by: Brian DiChiara <brian.dichiara@viget.com>

--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -18,7 +18,20 @@ Block: Alert Banner
 	template: template,
 	allowedBlocks: allowed
 } %}
-<section {{ block_attrs( attributes ) }}>
-	{{ function( 'alert_banner_dismiss_button' ) }}
-	{{ inner_blocks( inner ) }}
+
+{% set attrs = {} %}
+
+{% if function('is_admin') == false %}
+	{% set attrs = {
+		'x-data': '{ ' ~ attributes.id ~ ': $persist(true) }',
+		'x-show': attributes.id
+	} %}
+{% endif %}
+<section
+	{{ block_attrs( attributes, 'gap-24 lg:gap-48', attrs ) }}
+>
+	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">
+		{{ inner_blocks( inner ) }}
+	</div>
+	{{ function( 'alert_banner_dismiss_button', attributes.id ) }}
 </section>
