[#6] Adding style for icon cards (#38)
* [#6] Adding style for image cards

* [#6] Removed unnecessary styles

---------

Co-authored-by: Brian DiChiara <brian.dichiara@viget.com>

--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -12,3 +12,4 @@
 @import './blocks/cta.css';
 @import './blocks/logo-grid.css';
 @import './blocks/text-image.css';
+@import './blocks/text-icon-cards.css';
