--- a/wp-content/themes/wp-starter/blocks/video-embed/render.twig
+++ b/wp-content/themes/wp-starter/blocks/video-embed/render.twig
@@ -20,5 +20,5 @@
 	allowedBlocks: allowed
 } %}
 <section {{ block_attrs( attributes ) }}>
-  {{ inner_blocks( inner ) }}
+  <div class="flex flex-col">{{ inner_blocks( inner ) }}</div>
 </section>
