--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -13,3 +13,4 @@
 @import './blocks/logo-grid.css';
 @import './blocks/text-image.css';
 @import './blocks/text-icon-cards.css';
+@import './blocks/video-embed.css';
