[#61] fixing list style in editor

--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -11,6 +11,7 @@
 @import './blocks/alert-banner.css';
 @import './blocks/buttons.css';
 @import './blocks/cta.css';
+@import './blocks/list.css';
 @import './blocks/logo-grid.css';
 @import './blocks/text-image.css';
 @import './blocks/text-icon-cards.css';
