--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -13,6 +13,7 @@
 @import './blocks/cta.css';
 @import './blocks/list.css';
 @import './blocks/logo-grid.css';
+@import './blocks/quote.css';
 @import './blocks/text-image.css';
 @import './blocks/text-icon-cards.css';
 @import './blocks/video-embed.css';
