[#64] Updating style folder structure / small edits

--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -17,7 +17,11 @@
 }
 
 @layer components {
-	.entry-content > * {
+	/*
+		This adds a bit of space between blocks on a page.
+		Should be adjusted or removed as needed per project.
+	*/
+	.entry-content > *:not(:first-child) {
 		@apply mt-12;
 	}
 }
