[#64] Core block style (#74)
* [#64] styling quote, blockquote

* [#64] Fixing line height

* [#64] Adding spacing between blocks

* [#64] Updating style folder structure / small edits

--- a/wp-content/themes/wp-starter/src/styles/base/global.css
+++ b/wp-content/themes/wp-starter/src/styles/base/global.css
@@ -15,3 +15,13 @@
 		}
 	}
 }
+
+@layer components {
+	/*
+		This adds a bit of space between blocks on a page.
+		Should be adjusted or removed as needed per project.
+	*/
+	.entry-content > *:not(:first-child) {
+		@apply mt-12;
+	}
+}
