--- a/wp-content/themes/wp-starter/src/styles/main.css
+++ b/wp-content/themes/wp-starter/src/styles/main.css
@@ -9,6 +9,7 @@
 
 /*Import custom styles for WordPress core blocks*/
 @import './core-blocks/list.css';
+@import './core-blocks/navigation.css';
 @import './core-blocks/quote.css';
 
 /*Import custom styles for custom blocks*/
