--- a/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
@@ -2,15 +2,14 @@
 	.header-navigation {
 		@apply bg-gray-100 dark:bg-gray-800;
 
-		/* For Mobile Layout */
 		.wp-block-page-list {
 			@apply flex flex-col md:flex-row;
 		}
 
 		.wp-block-navigation {
-			/* For Mobile Layout */
 			@apply flex w-full flex-col md:w-auto md:flex-row;
 
+			/* Hide WP defaults */
 			.wp-block-navigation__responsive-container-open,
 			.wp-block-navigation__responsive-container-close,
 			.wp-block-navigation__submenu-icon {
@@ -23,7 +22,6 @@
 
 			.wp-block-pages-list__item,
 			.wp-block-navigation-submenu {
-				/* For Mobile Layout */
 				@apply flex flex-col md:flex-row;
 
 				/* Menu Links */
