--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -2,22 +2,31 @@
 	Block: Navigation Container
 #}
 
+{% set allowed = [
+	'core/paragraph',
+	'core/button',
+	'core/navigation'
+] %}
 {% set inner = {
 	template: template,
 	allowedBlocks: allowed
 } %}
 
-<div {{ block_attrs( attributes, 'wp-block-group navigation-container flex flex-col items-end gap-5 md:w-auto w-full', ) }}
-	{% if function('is_admin') == false %}
-		x-data="{menuIsOpen : false}"
-		x-trap="menuIsOpen"
-	{% endif %}
->
+{% set attrs = {} %}
+
+{% if function('is_admin') == false %}
+	{% set attrs = {
+		'x-data': '{menuIsOpen : false}',
+		'x-trap': 'menuIsOpen'
+	} %}
+{% endif %}
+
+<div {{ block_attrs( attributes, 'wp-block-group navigation-container flex flex-col items-end gap-5 md:w-auto w-full', attrs ) }}>
 	<button
 		{% if function('is_admin') == false %}
 			@click="menuIsOpen = !menuIsOpen"
 			x-cloak
-			class="md:hidden absolute inset-y-0 right-0 flex justify-center items-center w-32 h-32 text-gray-900 dark:text-white"
+			class="absolute inset-y-0 right-0 flex items-center justify-center w-32 h-32 text-gray-900 md:hidden dark:text-white"
 		{% else %}
 			class="hidden"
 		{% endif %}
@@ -50,14 +59,7 @@
 		{% endif %}
 		class="wp-block-group pt-24 md:pt-0 navigation-content md:!block w-full md:w-auto"
 	>
-		<div
-			{% if function('is_admin') == false %}
-				x-data="dropdown"
-				x-on:keydown.escape.prevent.stop="close($refs.button)"
-				x-on:focusin.window="! $refs.panel.contains($event.target) && close()"
-				x-id="['dropdown-button']"
-			{% endif %}
-		>
+		<div>
 			{{ inner_blocks( inner ) }}
 		</div>
 	</div>
