[#68] Footer Navigation and Navigation Container Tweaks

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -1,8 +1,13 @@
 {#
 	Block: Navigation Container
 #}
-
+{% set template = [
+	[
+		'core/navigation'
+	]
+] %}
 {% set allowed = [
+	'core/group',
 	'core/paragraph',
 	'core/button',
 	'core/navigation'
