--- a/wp-content/themes/wp-starter/src/styles/custom-blocks/breadcrumbs.css
+++ b/wp-content/themes/wp-starter/src/styles/custom-blocks/breadcrumbs.css
@@ -6,7 +6,7 @@
 		}
 
 		a {
-			@apply text-sky-700 underline hover:no-underline focus:no-underline;
+			@apply text-gray-700 underline hover:no-underline focus:no-underline;
 		}
 	}
 
@@ -22,7 +22,7 @@
 			}
 
 			.wp-block-button__link.wp-element-button {
-				@apply !m-0 bg-transparent !p-0 text-sky-700 underline hover:bg-transparent hover:no-underline focus:bg-transparent focus:no-underline;
+				@apply !m-0 bg-transparent !p-0 text-gray-700 underline hover:bg-transparent hover:no-underline focus:bg-transparent focus:no-underline;
 			}
 		}
 	}
