--- a/wp-content/themes/wp-starter/style.css
+++ b/wp-content/themes/wp-starter/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: WP Starter
 Theme URI: https://wpstarter.vigetx.com
-Author: Viget, briandichiara
+Author: Viget, briandichiara, nathanschmidt
 Author URI: https://viget.com
 Description: Custom block theme built by Viget.
 Requires at least: 6.0
