[#105] Added defaultLeft support

--- a/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
@@ -26,6 +26,9 @@
 			&::before {
 				content: "";
 			}
+			&::after {
+				display: none;
+			}
 		}
 	}
 }
@@ -62,4 +65,8 @@
 			aspect-ratio: 1/1;
 		}
 	}
+}
+
+div[id^="portal/tooltip-"] {
+	pointer-events: none;
 }
