--- a/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
@@ -1,6 +1,8 @@
 // Add icons to Button blocks and style appropriately.
-.wp-block-button[class*="has-icon__"] {
-	.wp-block-button__link {
+.wp-block-button[class*="has-icon__"],
+.wp-block-navigation-item[class*="has-icon__"] {
+	.wp-block-button__link,
+	.wp-block-navigation-item__content {
 		&::after {
 			content: "";
 		}
@@ -22,7 +24,8 @@
 	}
 
 	&.has-icon-position__left {
-		.wp-block-button__link {
+		.wp-block-button__link,
+		.wp-block-navigation-item__content {
 			&::before {
 				content: "";
 			}
