[#105] Block Icons Enhancements (#106)
* [#105] Fixes to filterable icons

* [#105] Added defaultLeft support

* [#105] Dummy proof the icon filter

* [#105] Added ACF Blocks Toolkit README file

* [#105] Added support for more block types

* [#105] Convert button icons file into class

* [#105] Fixed weird issue

--- a/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
@@ -1,6 +1,8 @@
 // Add icons to Button blocks and style appropriately.
-.wp-block-button[class*="has-icon__"] {
-	.wp-block-button__link {
+.wp-block-button[class*="has-icon__"],
+.wp-block-navigation-item[class*="has-icon__"] {
+	.wp-block-button__link,
+	.wp-block-navigation-item__content {
 		&::after {
 			content: "";
 		}
@@ -22,9 +24,13 @@
 	}
 
 	&.has-icon-position__left {
-		.wp-block-button__link {
+		.wp-block-button__link,
+		.wp-block-navigation-item__content {
 			&::before {
 				content: "";
+			}
+			&::after {
+				display: none;
 			}
 		}
 	}
@@ -62,4 +68,8 @@
 			aspect-ratio: 1/1;
 		}
 	}
+}
+
+div[id^="portal/tooltip-"] {
+	pointer-events: none;
 }
