--- a/wp-content/plugins/acf-blocks-toolkit/src/index.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/index.scss
@@ -1,10 +1,12 @@
-.wp-block-button[class*="has-icon__"] {
-	.wp-block-button__link {
+.wp-block-button[class*="has-icon__"],
+.wp-block-navigation-item[class*="has-icon__"] {
+	.wp-block-button__link,
+	.wp-block-navigation-item__content {
 		display: flex;
 		gap: 0.5em;
 		align-items: center;
 
-		span {
+		span[class$="__link-icon"] {
 			line-height: 0;
 		}
 
