--- a/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
@@ -1,29 +1,26 @@
 @layer components {
-	.wp-block,
-	.acf-block {
+	.wp-block-button {
+		.wp-block-button__link {
+			@apply btn-contained;
+		}
+
+		&.is-style-outline {
+			.wp-block-button__link {
+				@apply btn-outlined;
+			}
+		}
+	}
+
+	/* Light versions for dark mode*/
+	[class*='has-dark'] {
 		.wp-block-button {
 			.wp-block-button__link {
-				@apply btn-contained;
+				@apply btn-contained-light;
 			}
 
 			&.is-style-outline {
 				.wp-block-button__link {
-					@apply btn-outlined;
-				}
-			}
-		}
-
-		/* Light versions for dark mode*/
-		&[class*='has-dark'] {
-			.wp-block-button {
-				.wp-block-button__link {
-					@apply btn-contained-light;
-				}
-
-				&.is-style-outline {
-					.wp-block-button__link {
-						@apply btn-outlined-light;
-					}
+					@apply btn-outlined-light;
 				}
 			}
 		}
