--- a/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
@@ -1,7 +1,5 @@
 @layer components {
-	.block-editor-block-list__block {
-		.block-editor-rich-text__editable.rich-text {
-			@apply inline-block;
-		}
+	[data-type="core/list-item"] .block-editor-rich-text__editable.rich-text {
+		@apply inline-block;
 	}
 }
