--- a/wp-content/plugins/acf-form-blocks/blocks/form/style.css
+++ b/wp-content/plugins/acf-form-blocks/blocks/form/style.css
@@ -33,6 +33,7 @@
 
 .acf-block-form > .form-input + .form-input,
 .acf-block-form > .form-input + .wp-block-group,
+.acf-block-form > .form-input + .wp-block-columns,
 .acf-block-form > .wp-block-group + .form-input,
 .acf-block-form footer.form-submit {
 	margin-top: 1.75em;
